fix: Training Model

--- a/1-data-collection.ipynb
+++ b/1-data-collection.ipynb
@@ -5,7 +5,9 @@
    "cell_type": "markdown",
    "source": [
     "\n",
-    "# Data Scraping\n",
+    "# Data Collection / Pengumpulan Data\n",
+    "Mengambil data mentah dari berbagai sumber yang relevan dengan pertanyaan bisnis.\n",
+    "\n",
     "**Libraries:**\n",
     "- [Pandas](https://pandas.pydata.org/)\n",
     "- [BeautifulSoup](https://www.crummy.com/software/BeautifulSoup/bs4/doc/)\n",
@@ -16,7 +18,7 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "1. [Pandas](https://lms.sdmdigital.id/mod/book/view.php?id=21829&chapterid=366)",
+   "source": "## Data Loading",
    "id": "c6b1d614c2dafe1c"
   },
   {
@@ -25,61 +27,163 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-07-07T04:42:42.521183Z",
-     "start_time": "2025-07-07T04:42:42.490517Z"
+     "end_time": "2025-08-07T23:21:30.938656Z",
+     "start_time": "2025-08-07T23:21:30.826775Z"
     }
    },
    "source": [
     "import pandas as pd\n",
     "from termcolor import cprint\n",
-    "# Read the CSV file\n",
-    "data = pd.read_csv('data/data_nasabah.csv', delimiter=';')\n",
     "\n",
-    "cprint(f\"Data (Rows, Columns): {data.shape}\", \"green\") # Display the shape of the DataFrame (rows, columns)\n",
-    "print(data.head()) # Display 5 rows of the DataFrame"
+    "\n",
+    "df = pd.read_csv('data/data_nasabah.csv', delimiter=';') # Load data CSV\n",
+    "df.head() # Display 5 rows of the DataFrame"
    ],
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001B[32mData (Rows, Columns): (100, 10)\u001B[0m\n",
-      "  nasabah_id  umur jenis_kelamin  pendapatan  saldo_rata_rata  \\\n",
-      "0       N001    22     Perempuan     5800000          1508000   \n",
-      "1       N002    64     Perempuan     5700000          1254000   \n",
-      "2       N003    27     Perempuan     2950000           590000   \n",
-      "3       N004    34     Perempuan     3100000           186000   \n",
-      "4       N005    45     Laki-Laki     6700000          1474000   \n",
-      "\n",
-      "   jumlah_transaksi  jenis_produk  frekuensi_kunjungi_cabang  \\\n",
-      "0                19      tabungan                          1   \n",
-      "1                 9  kartu_kredit                          2   \n",
-      "2                12      tabungan                          1   \n",
-      "3                16      deposito                          5   \n",
-      "4                15  kartu_kredit                          3   \n",
-      "\n",
-      "  pengguna_mobile_banking  skor_kredit  \n",
-      "0                   TIDAK          900  \n",
-      "1                   TIDAK          900  \n",
-      "2                      YA          500  \n",
-      "3                   TIDAK          700  \n",
-      "4                      YA          800  \n"
-     ]
+     "data": {
+      "text/plain": [
+       "  nasabah_id  umur jenis_kelamin  pendapatan  saldo_rata_rata  \\\n",
+       "0       N001    22     Perempuan     5800000          1508000   \n",
+       "1       N002    64     Perempuan     5700000          1254000   \n",
+       "2       N003    27     Perempuan     2950000           590000   \n",
+       "3       N004    34     Perempuan     3100000           186000   \n",
+       "4       N005    45     Laki-Laki     6700000          1474000   \n",
+       "\n",
+       "   jumlah_transaksi  jenis_produk  frekuensi_kunjungi_cabang  \\\n",
+       "0                19      tabungan                          1   \n",
+       "1                 9  kartu_kredit                          2   \n",
+       "2                12      tabungan                          1   \n",
+       "3                16      deposito                          5   \n",
+       "4                15  kartu_kredit                          3   \n",
+       "\n",
+       "  pengguna_mobile_banking  skor_kredit  \n",
+       "0                   TIDAK          900  \n",
+       "1                   TIDAK          900  \n",
+       "2                      YA          500  \n",
+       "3                   TIDAK          700  \n",
+       "4                      YA          800  "
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>nasabah_id</th>\n",
+       "      <th>umur</th>\n",
+       "      <th>jenis_kelamin</th>\n",
+       "      <th>pendapatan</th>\n",
+       "      <th>saldo_rata_rata</th>\n",
+       "      <th>jumlah_transaksi</th>\n",
+       "      <th>jenis_produk</th>\n",
+       "      <th>frekuensi_kunjungi_cabang</th>\n",
+       "      <th>pengguna_mobile_banking</th>\n",
+       "      <th>skor_kredit</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>N001</td>\n",
+       "      <td>22</td>\n",
+       "      <td>Perempuan</td>\n",
+       "      <td>5800000</td>\n",
+       "      <td>1508000</td>\n",
+       "      <td>19</td>\n",
+       "      <td>tabungan</td>\n",
+       "      <td>1</td>\n",
+       "      <td>TIDAK</td>\n",
+       "      <td>900</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>N002</td>\n",
+       "      <td>64</td>\n",
+       "      <td>Perempuan</td>\n",
+       "      <td>5700000</td>\n",
+       "      <td>1254000</td>\n",
+       "      <td>9</td>\n",
+       "      <td>kartu_kredit</td>\n",
+       "      <td>2</td>\n",
+       "      <td>TIDAK</td>\n",
+       "      <td>900</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>N003</td>\n",
+       "      <td>27</td>\n",
+       "      <td>Perempuan</td>\n",
+       "      <td>2950000</td>\n",
+       "      <td>590000</td>\n",
+       "      <td>12</td>\n",
+       "      <td>tabungan</td>\n",
+       "      <td>1</td>\n",
+       "      <td>YA</td>\n",
+       "      <td>500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>N004</td>\n",
+       "      <td>34</td>\n",
+       "      <td>Perempuan</td>\n",
+       "      <td>3100000</td>\n",
+       "      <td>186000</td>\n",
+       "      <td>16</td>\n",
+       "      <td>deposito</td>\n",
+       "      <td>5</td>\n",
+       "      <td>TIDAK</td>\n",
+       "      <td>700</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>N005</td>\n",
+       "      <td>45</td>\n",
+       "      <td>Laki-Laki</td>\n",
+       "      <td>6700000</td>\n",
+       "      <td>1474000</td>\n",
+       "      <td>15</td>\n",
+       "      <td>kartu_kredit</td>\n",
+       "      <td>3</td>\n",
+       "      <td>YA</td>\n",
+       "      <td>800</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
-   "execution_count": 1
+   "execution_count": 3
   },
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "2. [BeatifulSoup](https://lms.sdmdigital.id/mod/book/view.php?id=21829&chapterid=363)",
+   "source": "## Data Scraping",
    "id": "cb84dbc7b3d5fc2e"
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-07T04:42:43.547828Z",
-     "start_time": "2025-07-07T04:42:42.593733Z"
+     "end_time": "2025-08-07T23:21:32.346989Z",
+     "start_time": "2025-08-07T23:21:31.122591Z"
     }
    },
    "cell_type": "code",
@@ -127,7 +231,7 @@
      ]
     }
    ],
-   "execution_count": 2
+   "execution_count": 4
   },
   {
    "metadata": {},
@@ -138,8 +242,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-07T04:42:46.555703Z",
-     "start_time": "2025-07-07T04:42:44.083061Z"
+     "end_time": "2025-08-07T23:21:35.518229Z",
+     "start_time": "2025-08-07T23:21:33.222505Z"
     }
    },
    "cell_type": "code",
@@ -197,7 +301,7 @@
      ]
     }
    ],
-   "execution_count": 3
+   "execution_count": 5
   },
   {
    "metadata": {},
@@ -208,8 +312,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-07T04:42:59.665667Z",
-     "start_time": "2025-07-07T04:42:46.809006Z"
+     "end_time": "2025-08-07T23:21:47.013815Z",
+     "start_time": "2025-08-07T23:21:36.286611Z"
     }
    },
    "cell_type": "code",
@@ -305,7 +409,7 @@
      ]
     }
    ],
-   "execution_count": 4
+   "execution_count": 6
   },
   {
    "metadata": {},
@@ -316,8 +420,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-07T04:43:02.894389Z",
-     "start_time": "2025-07-07T04:43:02.148667Z"
+     "end_time": "2025-08-07T23:21:48.212696Z",
+     "start_time": "2025-08-07T23:21:47.271725Z"
     }
    },
    "cell_type": "code",
@@ -365,7 +469,7 @@
      ]
     }
    ],
-   "execution_count": 5
+   "execution_count": 7
   },
   {
    "metadata": {},
@@ -376,8 +480,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-07T04:43:04.275149Z",
-     "start_time": "2025-07-07T04:43:03.578002Z"
+     "end_time": "2025-08-07T23:21:49.420465Z",
+     "start_time": "2025-08-07T23:21:48.622366Z"
     }
    },
    "cell_type": "code",
@@ -416,7 +520,7 @@
      ]
     }
    ],
-   "execution_count": 6
+   "execution_count": 8
   },
   {
    "metadata": {},
@@ -427,8 +531,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-07T04:43:11.328839Z",
-     "start_time": "2025-07-07T04:43:07.528529Z"
+     "end_time": "2025-08-07T23:21:52.673259Z",
+     "start_time": "2025-08-07T23:21:49.794975Z"
     }
    },
    "cell_type": "code",
@@ -745,7 +849,7 @@
       "</div>\n",
       "\n",
       "<form id=\"logout-form\" action=\"https://www.scrapingcourse.com/logout\" method=\"POST\" style=\"display: none;\">\n",
-      "    <input type=\"hidden\" name=\"_token\" value=\"OG2KOEi48iXBCVzABh6g4ljTeY2bWYZSS7mIYvmX\" autocomplete=\"off\"></form>\n",
+      "    <input type=\"hidden\" name=\"_token\" value=\"wYd0g6DCNQh1ZYEAozeqNKKtB1pp1LM6X1KQk4ZU\" autocomplete=\"off\"></form>\n",
       "\n",
       "        </div>\n",
       "    </main>\n",
@@ -760,7 +864,7 @@
      ]
     }
    ],
-   "execution_count": 7
+   "execution_count": 9
   },
   {
    "metadata": {},
@@ -771,8 +875,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-07T05:24:07.921132Z",
-     "start_time": "2025-07-07T05:24:03.858245Z"
+     "end_time": "2025-08-07T23:21:58.020266Z",
+     "start_time": "2025-08-07T23:21:52.882453Z"
     }
    },
    "cell_type": "code",
@@ -807,13 +911,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001B[32mu2A8a4Qcz5oWNqaA575NKbVPyKC4PIIunnlHXDpQ\u001B[0m\n",
+      "\u001B[32mcaLe12dWnd6HjNcrsd4pSKbNDD5FBuU2UL0YQcE6\u001B[0m\n",
       "Login successful!\n",
       "URL: https://www.scrapingcourse.com:443/dashboard, Status Code: 200, Reason: OK\n"
      ]
     }
    ],
-   "execution_count": 30
+   "execution_count": 10
   }
  ],
  "metadata": {
