--- a/3-data-cleaning.ipynb
+++ b/3-data-cleaning.ipynb
@@ -3,7 +3,10 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "# Data Cleansing",
+   "source": [
+    "# Pembersihan Data (Data Cleaning) / Data Cleansing\n",
+    "Menghapus data yang kotor, tidak konsisten, dan tidak relevan, sehingga data menjadi akurat."
+   ],
    "id": "819d155f1793e371"
   },
   {
